--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A frontend assessment test for our new pirates, which are willing to come on board.",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js  --colors",
-    "start": "webpack-dev-server --open --config webpack/webpack.config.dev.js"
+    "start": "webpack-dev-server --open --config webpack/webpack.config.dev.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "eslint-loader": "^3.0.2",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^4.0.0-beta.8",
+    "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
